--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </ul>
             </div>
         </section>
-        <section class="section.portfolio">
+        <section class="section-portfolio">
             <div class="container">
             <h2 class="section-portfolio-title">Our Portfolio</h2>
             <ul class="section-portfolio-list">
