--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </ul>
             </div>
         </section>
-        <section class="section.team">
+        <section class="section-ourteam">
             <div class="container">
             <h2 class="section-team-title">Our Team</h2>
             <ul class="section-team">
